test/expected/explain_o_arrow_i.out
explain int operator->()
        ^
9: error: invalid operator -> return type "int"; must be a pointer to struct, union, or class
